@@ -45,14 +45,16 @@ p_playermove_s = 0x2d7e6a0 ; old 0x02D82500
 ; Filming system hooks:
 ; ------------------------------------------------------------------------------
 ;
-; _delay SCR_UpdateScreen = _v0 + 0x150 ^ ; old: 0x01dd0370
-SCR_UpdateScreen = 0x01dcd9b0
-HUD_TOURIN = SCR_UpdateScreen + 0xd4
+;
+, _delay _v1 = _v0 + 0x150 ^ ; SCR_UpdateScreen ; old: 0x01dd0370
+_v1 = 0x01dcd9b0 ; SCR_UpdateScreen ; old: 0x01dd0370
+;
+HUD_TOURIN = _v1 + 0xd4
 HUD_TOUROUT = HUD_TOURIN + 0x35
 ;
-; _delay SCR_SetUpToDrawConsole = SCR_UpdateScreen + 0xAF ^ ; old: 0x01d57860
-; _delay V_RenderView = SCR_UpdateScreen + 0xB4 ^ ; old: 0x01dd4cd0 
-; _delay GL_Set2D = SCR_UpdateScreen + 0xB9 ^ ; old: 0x01d5b950
+; _delay SCR_SetUpToDrawConsole = _v1 + 0xAF ^ ; old: 0x01d57860
+; _delay V_RenderView = _v1 + 0xB4 ^ ; old: 0x01dd4cd0 
+; _delay GL_Set2D = _v1 + 0xB9 ^ ; old: 0x01d5b950
 ;
 ;
 R_RenderView_ = 0x01d50dd0 ; old 0x01d51d90
